feat: added postgres service, started implementing postgres handler, added jwt auth middleware
todo:
1) implement postgres handler
2) add mysql service and handler (ilgizjan)
