# internal/domain/entity/postgres/row.go
@@ -1,0 +1,3 @@
+package postgres
+
+type Row = map[string]any
