# internal/handler/response/get_table.go
@@ -1,0 +1,5 @@
+package response
+
+type GetTableResponse struct {
+	Name string `json:"name"`
+}
